<resources>
    <string name="app_name">Database App</string>
    <string name="book_title_hint">Enter a book title</string>
    <string name="book_author">Author</string>
    <string name="book_title">Title</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_publisher_hint">Enter the publisher</string>
    <string name="book_author_hint">Enter the author</string>
</resources>
