<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_margin="16dp"
              android:layout_height="match_parent">

    <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_title" />

    <EditText
            android:id="@+id/book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_title_hint" />

    <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_author" android:id="@+id/textView"/>

    <EditText
            android:id="@+id/book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_author_hint" />

    <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_publisher" />

    <EditText
            android:id="@+id/book_publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_publisher_hint" />

</LinearLayout>
